Added Portal Blazor Server

--- a/src/client/Client/Shared/MainLayout.razor
+++ b/src/client/Client/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-@namespace Client.App.Shared
+@namespace Client.Shared
 
 <MudThemeProvider Theme="CurrentTheme" IsDarkMode="true" />
 <MudDialogProvider Position="DialogPosition.Center" MaxWidth="MaxWidth.Small" FullWidth="true" CloseButton="false" DisableBackdropClick="true" CloseOnEscapeKey="false" />
