--- a/src/client/Client/Shared/AuthLayout.razor
+++ b/src/client/Client/Shared/AuthLayout.razor
@@ -4,8 +4,11 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 
-<MudContainer MaxWidth="MaxWidth.False" Class="@MainContainerClass" Style="width:100vw; height: 100vh;">
-    <MudContainer MaxWidth="MaxWidth.ExtraSmall" Class="pa-0 ma-8 background">
-        @Body
+@if (IsAuthVerified)
+{
+    <MudContainer MaxWidth="MaxWidth.False" Class="@MainContainerClass" Style="width:100vw; height: 100vh;">
+        <MudContainer MaxWidth="MaxWidth.ExtraSmall" Class="pa-0 ma-8 background">
+            @Body
+        </MudContainer>
     </MudContainer>
-</MudContainer>
+}
