--- a/src/client/Client/_Imports.razor
+++ b/src/client/Client/_Imports.razor
@@ -13,6 +13,7 @@
 @using Humanizer
 @using Humanizer.Localisation;
 @using Blazored.LocalStorage;
+@using Blazored.FluentValidation
 
 @using Client
 @using Client.Shared
