--- a/src/client/Client/Pages/Auth/Login.razor
+++ b/src/client/Client/Pages/Auth/Login.razor
@@ -13,17 +13,29 @@
             <MudItem xs="12">
                 <div class="d-flex flex-column align-center justify-center">
                     <MudText Typo="Typo.h2" Color="Color.Primary" Align="Align.Center" Class="text-lobster">LatchBox</MudText>
+                    <MudText Typo="Typo.body1" Align="Align.Center" Class="mt-2 shades-text text-white">Token Lock and Vesting Platform</MudText>
                 </div>
             </MudItem>
             <MudItem xs="12">
                 <div>
                     <MudText Typo="Typo.body1" Align="Align.Center" Class="mt-1 shades-text text-white">LOGIN</MudText>
+                    <MudText Typo="Typo.body1" Align="Align.Center" Class="mt-1 shades-text text-white">Use your NEP6 Wallet</MudText>
                 </div>
             </MudItem>
 
-            <MudItem xs="12" Class="d-flex justify-space-between align-center">
-                <MudLink Href="/auth/register" Disabled="IsProcessing">Create an Account</MudLink>
+            <MudItem xs="12">
+                <InputFile id="fileInput" OnChange="OnWalletFileChanged" hidden accept=".json" />
+                <MudButton HtmlTag="label" FullWidth="true" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Filled.FileOpen" for="fileInput">
+                   @WalletFilename
+                </MudButton>
             </MudItem>
+
+            <MudItem xs="12">
+                <MudTextField Label="Password" Placeholder="Please input password" Variant="Variant.Filled" Disabled="IsProcessing"
+                              @bind-Value="Model.Password" For="@(() => Model.Password)"
+                              InputType="@PasswordInput" Adornment="Adornment.End" AdornmentIcon="@PasswordInputIcon" OnAdornmentClick="TogglePasswordVisibility" />
+            </MudItem>
+
             <MudItem xs="12" Class="d-flex justify-center">
                 <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Disabled="@IsProcessing" Color="Color.Secondary" Size="Size.Large" Style="width: 100%;">
                     @if (IsProcessing)
@@ -32,7 +44,7 @@
                     }
                     else
                     {
-                        <MudText>Sign In</MudText>
+                        <MudText>Confirm</MudText>
                     }
                 </MudButton>
             </MudItem>
