--- a/src/client/Client/_Imports.razor
+++ b/src/client/Client/_Imports.razor
@@ -23,11 +23,10 @@
 @*@using Client.PeriodicExecutors*@
 @using Client.Infrastructure.Managers
 @using Client.Infrastructure.Constants
-@using Client.Infrastructure.Authentication
 @using Client.Infrastructure.Settings
 @using Client.Infrastructure.Extensions
 
-@inject AppRouteViewService AppRouteViewService
+@inject IAuthManager AuthManager
 
 @inject ClientPreferenceManager ClientPreferenceManager
 @inject NavigationManager NavigationManager
