--- a/src/client/Client/_Imports.razor
+++ b/src/client/Client/_Imports.razor
@@ -27,6 +27,7 @@
 @using Client.Infrastructure.Extensions
 
 @inject IAuthManager AuthManager
+@inject IWalletManager WalletManager
 
 @inject ClientPreferenceManager ClientPreferenceManager
 @inject NavigationManager NavigationManager
