--- a/src/client/Client/Shared/MainLayout.razor
+++ b/src/client/Client/Shared/MainLayout.razor
@@ -28,7 +28,7 @@
 
             <MudNavMenu Rounded="true" Margin="Margin.Dense">
                 <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Dashboard">Dashboard</MudNavLink>
-                <MudNavLink Href="/assets" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.AccountBalanceWallet">Assets</MudNavLink>
+                <MudNavLink Href="/assets" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Payments">Assets</MudNavLink>
                 <MudNavGroup Title="Locks" Icon="@Icons.Material.Filled.Dvr" Expanded="true">
                     <MudNavLink Href="/my/locks" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Lock">Your Locks</MudNavLink>
                     <MudNavLink Href="/my/claims" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Redeem">Your Claims</MudNavLink>
