--- a/src/client/Client/_Imports.razor
+++ b/src/client/Client/_Imports.razor
@@ -37,5 +37,6 @@
 @inject IJSRuntime _jsRuntime
 @inject IAppDialogService AppDialogService
 @inject AppBreakpointService AppBreakpointService
+@inject ClipboardService ClipboardService
 @*@inject FetchDataExecutor FetchDataExecutor
 @inject RenderUIExecutor RenderUIExecutor*@
