Rework Asset Page UI

--- a/src/client/Client/_Imports.razor
+++ b/src/client/Client/_Imports.razor
@@ -28,6 +28,7 @@
 
 @inject IAuthManager AuthManager
 @inject IWalletManager WalletManager
+@inject IAssetManager AssetManager
 
 @inject ClientPreferenceManager ClientPreferenceManager
 @inject NavigationManager NavigationManager
