--- a/src/client/Client/Pages/AssetsPage.razor
+++ b/src/client/Client/Pages/AssetsPage.razor
@@ -24,30 +24,55 @@
     {
         <MudPaper Square="true" Elevation="10" Class="grey darken-4">
 
-            <MudTable Items="@AddressAssets" GroupBy="@_groupDefinition" GroupHeaderStyle="background-color:var(--mud-palette-background-grey)" GroupFooterClass="mb-4" Class="mx-0 grey darken-4" Breakpoint="Breakpoint.None" FixedHeader="true">
-                <ColGroup>
-                    <col />
-                    <col />
-                    <col />
-                </ColGroup>
+            <MudTable Items="@AddressBalances" Class="mx-0 grey darken-4" Breakpoint="Breakpoint.None" FixedHeader="true">
                 <HeaderContent>
-                    <MudTh>Symbol</MudTh>
-                    <MudTh>Asset Hash</MudTh>
-                    <MudTh>Balance</MudTh>
+                    <MudTh>Address</MudTh>
+                    <MudTh>NEO</MudTh>
+                    <MudTh>GAS</MudTh>
+                    <MudTh>@PlatformToken.Symbol</MudTh>
                 </HeaderContent>
-                <GroupHeaderTemplate>
-                    <MudTh Class="mud-table-cell-custom-group" colspan="3">
-                        <span class="cursor-pointer" @onclick="@(async () => await OnCopyWalletAddressAsync(context.Key.ToString()))">@($"{context.GroupName}: {context.Key}")</span>
-                    </MudTh>
-                </GroupHeaderTemplate>
                 <RowTemplate>
-                    <MudTd>@context.Symbol</MudTd>
-                    <MudTd>@context.AssetHash</MudTd>
-                    <MudTd>@context.Balance.ToString($"N{(int)context.Decimals}")</MudTd>
-                </RowTemplate>
-            </MudTable>
+                    <MudTd><span class="cursor-pointer">@context.Address</span></MudTd>
+                    <MudTd>
+                        <span>
+                            @if (!IsBalanceLoaded)
+                            {
+                                <MudSkeleton Height="200" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" />
+                            }
+                            else
+                            {
+                                @context.NEOBalanceDisplay
+                            }
+                        </span>
+                    </MudTd>
+                    <MudTd>
+                        <span>
+                            @if (!IsBalanceLoaded)
+                            {
+                                <MudSkeleton Height="200" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" />
+                            }
+                            else
+                            {
+                                @context.GASBalanceDisplay
+                            }
+                        </span>
+                    </MudTd>
+                    <MudTd>
+                        <span>
+                            @if (!IsBalanceLoaded)
+                            {
+                                <MudSkeleton Height="200" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" />
+                            }
+                            else
+                            {
+                                @context.PlatformTokenBalanceDisplay
+                            }
+                        </span>
+                    </MudTd>
+            </RowTemplate>
+        </MudTable>
 
-        </MudPaper>
+    </MudPaper>
     }
 
 </MudContainer>
