--- a/src/client/Client/_Imports.razor
+++ b/src/client/Client/_Imports.razor
@@ -22,6 +22,7 @@
 @using Client.Services
 @*@using Client.PeriodicExecutors*@
 @using Client.Infrastructure.Managers
+@using Client.Infrastructure.Managers.Interfaces
 @using Client.Infrastructure.Constants
 @using Client.Infrastructure.Settings
 @using Client.Infrastructure.Extensions
