--- a/src/client/Client/Pages/Modals/AssetsPreviewerModal.razor
+++ b/src/client/Client/Pages/Modals/AssetsPreviewerModal.razor
@@ -32,7 +32,7 @@
                                 {
                                     <div class="d-flex justify-space-between mb-2">
                                         <MudText Typo="Typo.body1" Class="text-white">@asset.Symbol</MudText>
-                                        <MudText Typo="Typo.body1" Class="text-white">@(asset.Balance.ToBalanceDisplay(asset.Decimals))</MudText>
+                                        <MudText Typo="Typo.body1" Class="text-white">@(asset.Balance.ToAmountDisplay(asset.Decimals))</MudText>
                                     </div>
                                 }
                             }
