--- a/src/client/Client/Shared/MainLayout.razor
+++ b/src/client/Client/Shared/MainLayout.razor
@@ -6,40 +6,43 @@
 <MudDialogProvider Position="DialogPosition.Center" MaxWidth="MaxWidth.Small" FullWidth="true" CloseButton="false" DisableBackdropClick="true" CloseOnEscapeKey="false" />
 <MudSnackbarProvider />
 
-@if (IsAuthVerified)
-{
-    <MudLayout>
-        <MudAppBar Elevation="5" Dense="false">
-            <AppBarContent />
-        </MudAppBar>
-        <MudDrawer @bind-Open="DrawerOpen" Elevation="10" Width="300px" Variant="@DrawerVariant.Mini" ClipMode="DrawerClipMode.Never">
-            @if (!DrawerOpen)
-            {
-                <MudDrawerHeader Class="py-2 px-4">
-                    <MudText Typo="Typo.h4" Color="Color.Primary" Align="Align.Center" Class="text-lobster my-1">L</MudText>
-                </MudDrawerHeader>
-            }
-            else
-            {
-                <MudDrawerHeader>
-                    <MudText Typo="Typo.h4" Color="Color.Primary" Class="text-lobster my-1">LatchBox</MudText>
-                </MudDrawerHeader>
-            }
+<MudLayout>
+    <MudAppBar Elevation="5" Dense="false">
+        <AppBarContent />
+    </MudAppBar>
+    <MudDrawer @bind-Open="DrawerOpen" Elevation="10" Width="300px" Variant="@DrawerVariant.Mini" ClipMode="DrawerClipMode.Never">
+        @if (!DrawerOpen)
+        {
+            <MudDrawerHeader Class="pt-2 px-4">
+                <MudText Typo="Typo.h4" Color="Color.Primary" Align="Align.Center" Class="text-lobster my-1">L</MudText>
+            </MudDrawerHeader>
+        }
+        else
+        {
+            <MudDrawerHeader>
+                <MudText Typo="Typo.h4" Color="Color.Primary" Class="text-lobster my-1">LatchBox</MudText>
+            </MudDrawerHeader>
+        }
 
-            <MudNavMenu Rounded="true" Margin="Margin.Dense">
-                <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Dashboard">Dashboard</MudNavLink>
-                <MudNavLink Href="/assets" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Payments">Assets</MudNavLink>
-                <MudNavGroup Title="Token Latch Boxes" Icon="@Icons.Material.Filled.LockClock" Expanded="true">
-                    <MudNavLink Href="/my/locks" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Lock">Locks</MudNavLink>
-                    <MudNavLink Href="/my/claims" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Redeem">Claims</MudNavLink>
-                    <MudNavLink Href="/my/refunds" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.LockReset">Refunds</MudNavLink>
-                </MudNavGroup>
-            </MudNavMenu>
-        </MudDrawer>
-        <MudMainContent>
-            <MudContainer MaxWidth="MaxWidth.False" Class="mt-4 mb-2 px-2 px-sm-4 py-4">
-                @Body
-            </MudContainer>
-        </MudMainContent>
-    </MudLayout>
-}
+        <MudNavMenu Rounded="true" Margin="Margin.Dense">
+            <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Dashboard">Dashboard</MudNavLink>
+            <MudNavLink Href="/assets" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Payments">My Assets</MudNavLink>
+            <MudNavGroup Title="Locking" Icon="@Icons.Material.Filled.LockClock" Expanded="true">
+                <MudNavLink Href="/locks/assets" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.CurrencyBitcoin">Assets</MudNavLink>
+                <MudNavLink Href="/locks" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Lock">My Locks</MudNavLink>
+                <MudNavLink Href="/locks/claims" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Redeem">My Claims</MudNavLink>
+                <MudNavLink Href="/locks/refunds" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.LockReset">My Refunds</MudNavLink>
+            </MudNavGroup>
+            <MudNavGroup Title="Vesting" Icon="@Icons.Material.Filled.Assessment" Expanded="true">
+                <MudNavLink Href="/vesting" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.AccountBalance">My Vault</MudNavLink>
+                <MudNavLink Href="/vesting/claims" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Redeem">My Claims</MudNavLink>
+                <MudNavLink Href="/vesting/refunds" Disabled="@(!IsAuthenticated)" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.LockReset">My Refunds</MudNavLink>
+            </MudNavGroup>
+        </MudNavMenu>
+    </MudDrawer>
+    <MudMainContent>
+        <MudContainer MaxWidth="MaxWidth.False" Class="mt-4 mb-2 px-2 px-sm-4 py-4">
+            @Body
+        </MudContainer>
+    </MudMainContent>
+</MudLayout>
