--- a/src/client/Client/Pages/Modals/ConnectWalletModal.razor
+++ b/src/client/Client/Pages/Modals/ConnectWalletModal.razor
@@ -7,8 +7,8 @@
 
                     <MudItem xs="12">
                         <div>
-                            <MudText Typo="Typo.body1" Class="text-white">Network: <b>@Network</b></MudText>
-                            <MudText Typo="Typo.body1" Class="text-white">RPC: <b>@RpcUrl</b></MudText>
+                            <MudText Typo="Typo.body1" Class="text-white"><b>Network:</b> @Network</MudText>
+                            <MudText Typo="Typo.body1" Class="text-white"><b>RPC Url:</b> @RpcUrl</MudText>
                         </div>
                     </MudItem>
 
