--- a/src/client/Client/Shared/Components/AppBarContent.razor
+++ b/src/client/Client/Shared/Components/AppBarContent.razor
@@ -39,8 +39,8 @@
                 @if (IsPlatformTokenLoaded && IsPlatformTokenOnSale)
                 {
                     <MudHidden Breakpoint="Breakpoint.MdAndUp">
-                        <MudMenuItem>1 NEO ≈ @PlatformTokensPerNEO @PlatformTokenSymbol</MudMenuItem>
-                        <MudMenuItem>1 GAS ≈ @PlatformTokensPerGAS @PlatformTokenSymbol</MudMenuItem>
+                        <MudMenuItem Class="cursor-default">1 NEO ≈ @PlatformTokensPerNEO @PlatformTokenSymbol</MudMenuItem>
+                        <MudMenuItem Class="cursor-default">1 GAS ≈ @PlatformTokensPerGAS @PlatformTokenSymbol</MudMenuItem>
                         <MudMenuItem>Buy @PlatformTokenSymbol</MudMenuItem>
                     </MudHidden>
                 }
