Added Buy LATCH Token

--- a/src/client/Client/Shared/Dialogs/DisconnectWalletDialog.razor
+++ b/src/client/Client/Shared/Dialogs/DisconnectWalletDialog.razor
@@ -2,7 +2,7 @@
     <TitleContent>
         <MudText Typo="Typo.h5">
             <MudIcon Icon="@Icons.Material.Filled.Logout" Class="mr-3 mb-n1" />
-            Logout Confirmation
+            Disconnect Wallet Confirmation
         </MudText>
     </TitleContent>
     <DialogContent>
