--- a/src/client/Client/Shared/Components/AppBarContent.razor
+++ b/src/client/Client/Shared/Components/AppBarContent.razor
@@ -34,8 +34,8 @@
                         <MudChip Class="cursor-pointer" Color="Color.Info">Buy @PlatformTokenSymbol</MudChip>
                     </ActivatorContent>
                     <ChildContent>
-                        <MudMenuItem OnClick="@(() => InvokeBuyPlatformTokenModal("NEO"))">Buy with NEO</MudMenuItem>
-                        <MudMenuItem OnClick="@(() => InvokeBuyPlatformTokenModal("GAS"))">Buy with GAS</MudMenuItem>
+                        <MudMenuItem OnClick="@(() => InvokeBuyPlatformTokenModal("NEO"))">Buy @PlatformTokenSymbol with NEO</MudMenuItem>
+                        <MudMenuItem OnClick="@(() => InvokeBuyPlatformTokenModal("GAS"))">Buy @PlatformTokenSymbol with GAS</MudMenuItem>
                     </ChildContent>
                 </MudMenu>
             </MudHidden>
