--- a/src/client/Client/Pages/Modals/BuyPlatformTokenModal.razor
+++ b/src/client/Client/Pages/Modals/BuyPlatformTokenModal.razor
@@ -5,9 +5,12 @@
             <MudContainer MaxWidth="MaxWidth.False">
                 <MudGrid Class="pt-0 pb-4" Spacing="2">
                     <MudItem xs="12">
-                            <MudText Typo="Typo.body1" Class="text-white"><b>@BuyConversationDisplay</b></MudText>
+                        <MudText Typo="Typo.body1" Class="text-white"><b>@BuyConversationDisplay</b></MudText>
                     </MudItem>
 
+                    <MudItem xs="12">
+
+                    </MudItem>
                     <MudItem xs="12">
                         <MudSelect T="string" Disabled="IsProcessing" Label="Address" Variant="Variant.Outlined" MultiSelection="false" @bind-Value="Model.WalletAddress">
                             @foreach (var walletAddress in WalletAddresses)
@@ -18,7 +21,7 @@
                     </MudItem>
 
                     <MudItem xs="12">
-                        <MudTextField Label="@(string.Concat("Amount ", Model.Currency))" Variant="Variant.Filled" Disabled="IsProcessing"
+                        <MudTextField Label="@(string.Concat("Amount ", AssetToken.Symbol))" Variant="Variant.Outlined" Disabled="IsProcessing"
                                       @bind-Value="Model.Amount" For="@(() => Model.Amount)" T="double" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Paid" />
                     </MudItem>
 
