--- a/src/client/Client/Pages/Modals/ConnectWalletModal.razor
+++ b/src/client/Client/Pages/Modals/ConnectWalletModal.razor
@@ -20,7 +20,7 @@
                     </MudItem>
 
                     <MudItem xs="12">
-                        <MudTextField Label="Password" Placeholder="Please input password" Variant="Variant.Filled" Disabled="IsProcessing"
+                        <MudTextField Label="Password" Placeholder="Please input password" Variant="Variant.Outlined" Disabled="IsProcessing"
                                       @bind-Value="Model.Password" For="@(() => Model.Password)"
                                       InputType="@PasswordInput" Adornment="Adornment.End" AdornmentIcon="@PasswordInputIcon" OnAdornmentClick="TogglePasswordVisibility" />
                     </MudItem>
