--- a/src/client/Client/Shared/Components/AppBarContent.razor
+++ b/src/client/Client/Shared/Components/AppBarContent.razor
@@ -41,7 +41,7 @@
             </MudHidden>
         }
 
-        <MudMenu Class="ml-3" AnchorOrigin="Origin.BottomRight" Label="Connected" TransformOrigin="Origin.TopRight" StartIcon="@Icons.Material.Filled.ConnectedTv" EndIcon="@Icons.Material.Filled.KeyboardArrowDown" Variant="Variant.Filled" Color="Color.Primary">
+        <MudMenu Class="ml-3" Label="Connected" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight" StartIcon="@Icons.Material.Filled.ConnectedTv" EndIcon="@Icons.Material.Filled.KeyboardArrowDown" Variant="Variant.Filled" Color="Color.Primary">
             <ChildContent>
                 <MudMenuItem Class="cursor-default"><span>@Network</span> <span>(@RpcUrl)</span></MudMenuItem>
                 @if (IsPlatformTokenLoaded && IsPlatformTokenOnSale)
