--- a/src/client/Client/Pages/Locks/MyLocksPage.razor
+++ b/src/client/Client/Pages/Locks/MyLocksPage.razor
@@ -27,7 +27,7 @@
         <MudPaper Square="true" Elevation="10" Class="grey darken-4">
             <MudTable Items="@Locks" Class="mx-0 grey darken-4" FixedHeader="true">
                 <HeaderContent>
-                    <MudTh>Lock Id</MudTh>
+                    <MudTh>Lock Index</MudTh>
                     <MudTh>Initiator</MudTh>
                     <MudTh>Date Start</MudTh>
                     <MudTh>Date Unlock</MudTh>
